--- a/index.html
+++ b/index.html
@@ -5,30 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+
+  <h1>Rock, Paper, Scissors Game</h1>
+
   <div class="round-selector">
-    <label for="rounds-input">Number of Rounds:</label>
-    <input type="number" id="rounds-input" min="1" max="20" value="5" />
-    <button id="start-game-btn">Start Game</button>
-    <input type="color" id="bg-color" title="Pick background color" />
+    <label for="rounds">Rounds:</label>
+    <input type="number" id="rounds" min="1" max="20" value="5" />
+    
+    <label for="bg-color">Background:</label>
+    <input type="color" id="bg-color" />
   </div>
 
-  <div id="game-area" style="display: none;">
-    <div class="scoreboard">
-      <p>Player: <span id="player-score">0</span></p>
-      <p>Computer: <span id="computer-score">0</span></p>
-    </div>
-    <div class="choices">
-      <button onclick="playRound('rock')">Rock</button>
-      <button onclick="playRound('paper')">Paper</button>
-      <button onclick="playRound('scissors')">Scissors</button>
-    </div>
-    <p id="round-result"></p>
-    <p id="final-message"></p>
-    <button id="restart-btn" onclick="restartGame()" style="display:none;">Restart</button>
+  <div class="scoreboard">
+    <p>Player: <span id="player-score">0</span></p>
+    <p>Computer: <span id="computer-score">0</span></p>
+    <p>Round: <span id="round-number">0</span></p>
   </div>
 
+  <div class="choices">
+    <button data-choice="rock">Rock</button>
+    <button data-choice="paper">Paper</button>
+    <button data-choice="scissors">Scissors</button>
+  </div>
+
+  <div id="round-result"></div>
+  <div id="final-message"></div>
+
+  <button id="restart-btn">Restart</button>
+
+  <canvas id="scoreChart"></canvas>
+
+  <!-- Sound effects -->
   <audio id="win-sound" src="sounds/win.wav"></audio>
   <audio id="lose-sound" src="sounds/lose.wav"></audio>
   <audio id="tie-sound" src="sounds/tie.wav"></audio>
