--- a/index.html
+++ b/index.html
@@ -5,41 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-
-  <h1>Rock, Paper, Scissors Game</h1>
-
-  <div class="round-selector">
-    <label for="rounds">Rounds:</label>
-    <input type="number" id="rounds" min="1" max="20" value="5" />
-    
-    <label for="bg-color">Background:</label>
-    <input type="color" id="bg-color" />
+  <div class="toggle-theme">
+    <label class="switch">
+      <input type="checkbox" id="darkModeToggle">
+      <span class="slider"></span>
+    </label>
+    <span>Dark Mode</span>
   </div>
 
-  <div class="scoreboard">
-    <p>Player: <span id="player-score">0</span></p>
-    <p>Computer: <span id="computer-score">0</span></p>
-    <p>Round: <span id="round-number">0</span></p>
+  <div class="container">
+    <h1>Rock Paper Scissors</h1>
+    <div class="scoreboard">
+      <div>Player: <span id="player-score">0</span></div>
+      <div>Computer: <span id="computer-score">0</span></div>
+    </div>
+    <div class="choices">
+      <button onclick="play('rock')">🪨 Rock</button>
+      <button onclick="play('paper')">📄 Paper</button>
+      <button onclick="play('scissors')">✂️ Scissors</button>
+    </div>
+    <div class="result" id="result"></div>
+    <div id="final-result" class="final-result"></div>
   </div>
 
-  <div class="choices">
-    <button data-choice="rock">Rock</button>
-    <button data-choice="paper">Paper</button>
-    <button data-choice="scissors">Scissors</button>
-  </div>
-
-  <div id="round-result"></div>
-  <div id="final-message"></div>
-
-  <button id="restart-btn">Restart</button>
-
-  <canvas id="scoreChart"></canvas>
-
-  <!-- Sound effects -->
   <audio id="win-sound" src="sounds/win.wav"></audio>
   <audio id="lose-sound" src="sounds/lose.wav"></audio>
   <audio id="tie-sound" src="sounds/tie.wav"></audio>
@@ -47,5 +37,4 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
